--- a/MCS.ipynb
+++ b/MCS.ipynb
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "mols = [Chem.MolFromSmiles('c1ccccc1'),Chem.MolFromSmiles('C1CCCC=C1')]\n",
+    "mols = [Chem.MolFromSmiles('c1ccccc1'), Chem.MolFromSmiles('C1CCCC=C1')]\n",
     "img = Draw.MolsToGridImage(mols, molsPerRow=2)\n",
     "img"
    ]
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(mols,bondCompare=rdFMCS.BondCompare.CompareOrderExact).smartsString\n",
+    "res = rdFMCS.FindMCS(mols, bondCompare=rdFMCS.BondCompare.CompareOrderExact).smartsString\n",
     "print(res) # 结果为空"
    ]
   },
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(mols,bondCompare=rdFMCS.BondCompare.CompareAny).smartsString\n",
+    "res = rdFMCS.FindMCS(mols, bondCompare=rdFMCS.BondCompare.CompareAny).smartsString\n",
     "print(res)\n",
     "m = Chem.MolFromSmarts(res)\n",
     "img = Draw.MolToImage(m, size=(150,150))\n",
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(mols,bondCompare=rdFMCS.BondCompare.CompareOrder).smartsString\n",
+    "res = rdFMCS.FindMCS(mols, bondCompare=rdFMCS.BondCompare.CompareOrder).smartsString\n",
     "print(res)\n",
     "m = Chem.MolFromSmarts(res)\n",
     "m"
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "mols = (Chem.MolFromSmiles('NCC'),Chem.MolFromSmiles('OC=C'))\n",
+    "mols = (Chem.MolFromSmiles('NCC'), Chem.MolFromSmiles('OC=C'))\n",
     "Draw.MolsToGridImage(mols)"
    ]
   },
@@ -285,7 +285,7 @@
    "metadata": {},
    "source": [
     "## 4.maximizeBonds参数\n",
-    "一个结构由原子和键组成。默认情况下，MCS查找的目标是让键的数量最大化，相当于让环的数量最大化。最大化键的数量时，会使环的数量最大化，但也可能出现两个小环键的数量不如一个大环多的情况。可以通过将maximizeBonds参数设为False来取消设置。"
+    "一个结构由原子和键组成。默认情况下，MCS查找的目标是让键的数量最大化，相当于让环的数量最大化。最大化键的数量时，会使环的数量最大化，但也可能出现两个小环键的数量不如一个大环多的情况。可以通过将maximizeBonds参数设为False来取消设置。（暂时还不知道怎么使用）"
    ]
   },
   {
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "mols = (Chem.MolFromSmiles('NC1OC1'),Chem.MolFromSmiles('C1OC1[N+](=O)[O-]'))\n",
+    "mols = (Chem.MolFromSmiles('NC1OC1'), Chem.MolFromSmiles('C1OC1[N+](=O)[O-]'))\n",
     "img = Draw.MolsToGridImage(mols, molsPerRow=2)\n",
     "img"
    ]
@@ -526,7 +526,7 @@
     }
    ],
    "source": [
-    "ms = [Chem.MolFromSmiles(x) for x in ('CC1CCC1','CCC1CC1',)]\n",
+    "ms = [Chem.MolFromSmiles(x) for x in ('CC1CCC1', 'CCC1CC1')]\n",
     "Draw.MolsToGridImage(ms)"
    ]
   },
@@ -586,7 +586,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(ms,ringMatchesRingOnly=True).smartsString\n",
+    "res = rdFMCS.FindMCS(ms, ringMatchesRingOnly=True).smartsString\n",
     "print(res)\n",
     "m = Chem.MolFromSmarts(res)\n",
     "m"
@@ -617,7 +617,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(ms,completeRingsOnly=True).smartsString\n",
+    "res = rdFMCS.FindMCS(ms, completeRingsOnly=True).smartsString\n",
     "print(res)\n",
     "m = Chem.MolFromSmarts(res)\n",
     "m"
@@ -648,7 +648,7 @@
     }
    ],
    "source": [
-    "res = rdFMCS.FindMCS(ms,ringMatchesRingOnly=True,completeRingsOnly=True).smartsString\n",
+    "res = rdFMCS.FindMCS(ms, ringMatchesRingOnly=True, completeRingsOnly=True).smartsString\n",
     "print(res)\n",
     "m = Chem.MolFromSmarts(res)\n",
     "m"
@@ -658,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## timeout参数\n",
+    "## 8.timeout参数\n",
     "MCS算法会穷尽每一种可能，寻找到一个最大的公共子结构。一般情况下说，该算法几秒内就能完成，但是有时也会花很长时间甚至花几分钟。这时，可以使用timeout参数来规定最大搜索时长，到达指定时长仍没有搜索完时，会返回现有的最优结果，并将canceled属性设置为True。该参数单位为秒。"
    ]
   },
