--- a/recap_brics_decompose_build.ipynb
+++ b/recap_brics_decompose_build.ipynb
@@ -205,7 +205,7 @@
     "## 3.BRICS合成\n",
     " - BRICS模块除了支持拆解分子，也可以对一组片段进行合成：BRICS.BRICSBuild()\n",
     " - 返回一个生成器，可以通过next()来获取元素\n",
-    " - 生成的分子也是未经过核对的，可以更新一下化合价：UpdatePropertyCache()"
+    " - 生成的分子也是未经过核对的，可以对分子重新计算一下隐式化合价、环相关等属性，并做更新：UpdatePropertyCache()"
    ]
   },
   {
