update auto import mols

--- a/postgresql_by_psycopg2.ipynb
+++ b/postgresql_by_psycopg2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# python连接数据库"
+    "# 一、python操作postgresql介绍"
    ]
   },
   {
@@ -258,7 +258,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_excel('ippin.xlsx')\n",
+    "df = pd.read_excel('f:\\学习课件\\ippin\\ippin.xlsx')\n",
     "df.head(1)"
    ]
   },
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feat_list = ['%s'%str(calculator.CalcDescriptors(mol)) for mol in mol_list]"
+    "feat_list = ['%s'%(str(calculator.CalcDescriptors(mol))) for mol in mol_list]"
    ]
   },
   {
@@ -382,11 +382,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 二、自动化导入脚本\n",
+    "对dataframe中的分子计算类药五规则，并自动导入到数据库中。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test for connection: [('Administrator',)]\n",
+      "3.104177713394165\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "from rdkit.ML.Descriptors import MoleculeDescriptors\n",
+    "\n",
+    "def import_data(df, project, smi_col='SMILES', database='mols', table='info', renew=True):\n",
+    "    '''Import smiles and corresponding properties into the postgreSQL automatically.\n",
+    "    \n",
+    "    df: the DataFrame containing SMILES of the mols.\n",
+    "    smi_col: the column name of the SMILES.\n",
+    "    database: the database that want to modified.\n",
+    "    renew: drop the table and create a new one.\n",
+    "    table: the table that will be modified.\n",
+    "    '''\n",
+    "    # connect to database and test for connection\n",
+    "    time1 = time.time()\n",
+    "    connection = psycopg2.connect(database=database,\n",
+    "                                  user='Administrator',\n",
+    "                                  password='postgresql',\n",
+    "                                  port='5432',\n",
+    "                                  host='127.0.0.1')\n",
+    "    \n",
+    "    cur = connection.cursor()\n",
+    "    cur.execute(\"select * from current_user;\")\n",
+    "    print('test for connection:', cur.fetchall())\n",
+    "\n",
+    "    # drop and create a new table\n",
+    "    if renew:\n",
+    "        query = 'drop table %s'%table\n",
+    "        cur.execute(query)\n",
+    "        query = '''create table %s(id serial primary key,\n",
+    "                                   database text,\n",
+    "                                   project text,\n",
+    "                                   SMILES text,\n",
+    "                                   HA integer,\n",
+    "                                   HD integer,\n",
+    "                                   RB integer,\n",
+    "                                   MW float,\n",
+    "                                   LOGP float);'''%table\n",
+    "        cur.execute(query)\n",
+    "\n",
+    "    # calc the descriptors\n",
+    "    des_list = ['MolWt', 'NumHAcceptors', 'NumHDonors', 'MolLogP', 'NumRotatableBonds']\n",
+    "    calculator = MoleculeDescriptors.MolecularDescriptorCalculator(des_list)\n",
+    "    feat_all = []\n",
+    "    create_var = locals()\n",
+    "    for mol_smiles in df[smi_col]:\n",
+    "        mol = Chem.MolFromSmiles(mol_smiles)\n",
+    "        if not mol:\n",
+    "            continue\n",
+    "        feat_mol = []\n",
+    "        for item in calculator.CalcDescriptors(mol):\n",
+    "            if isinstance(item, float) or isinstance(item, int):\n",
+    "                item = str(round(item, 3))\n",
+    "            feat_mol.append(item)\n",
+    "        feat_mol.append(\"'%s'\"%mol_smiles)\n",
+    "        feat_all.append(\"(%s)\"%(','.join(feat_mol)))\n",
+    "\n",
+    "    # import the data into database\n",
+    "    query = \"insert into info (MW, HA, HD, LOGP, RB, SMILES) values %s\" % (','.join(feat_all))\n",
+    "    cur.execute(query)\n",
+    "    query = \"update info set project = '%s'\"%project\n",
+    "    cur.execute(query)\n",
+    "    connection.commit()\n",
+    "    time2 = time.time()\n",
+    "    print(time2-time1)\n",
+    "\n",
+    "df = pd.read_excel('f:\\学习课件\\ippin\\ippin.xlsx')\n",
+    "import_data(df, 'ippih', 'SMILES', 'mols', 'info', True)"
    ]
   }
  ],
