--- a/postgresql_by_psycopg2.ipynb
+++ b/postgresql_by_psycopg2.ipynb
@@ -37,7 +37,7 @@
    ],
    "source": [
     "import psycopg2\n",
-    "connection = psycopg2.connect(database='mols',\n",
+    "connection = psycopg2.connect(database='molecules',\n",
     "                              user='Administrator',\n",
     "                              password='postgresql',\n",
     "                              port='5432',\n",
@@ -146,6 +146,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection.commit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +260,7 @@
        "0         cationic       -9.0          -9.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +289,7 @@
        "1351"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +370,7 @@
        "[(1351,)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,32 +408,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test for connection: [('Administrator',)]\n",
-      "3.104177713394165\n"
+      "test for connection: Administrator\n",
+      "drop the info and create a new one\n",
+      "using time: 2.7821590900421143\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "import psycopg2\n",
     "import time\n",
     "import pandas as pd\n",
+    "from rdkit import Chem\n",
     "from rdkit.ML.Descriptors import MoleculeDescriptors\n",
     "\n",
-    "def import_data(df, project, smi_col='SMILES', database='mols', table='info', renew=True):\n",
+    "def import_data(df, smi_col, database, project=None, table='info', renew=False):\n",
     "    '''Import smiles and corresponding properties into the postgreSQL automatically.\n",
     "    \n",
     "    df: the DataFrame containing SMILES of the mols.\n",
     "    smi_col: the column name of the SMILES.\n",
-    "    database: the database that want to modified.\n",
+    "    database: the PG database that want to modified.\n",
+    "    project: the project that the mols belong to.\n",
+    "    table: the table in the database that will be modified.\n",
     "    renew: drop the table and create a new one.\n",
-    "    table: the table that will be modified.\n",
     "    '''\n",
     "    # connect to database and test for connection\n",
     "    time1 = time.time()\n",
@@ -436,12 +449,21 @@
     "    \n",
     "    cur = connection.cursor()\n",
     "    cur.execute(\"select * from current_user;\")\n",
-    "    print('test for connection:', cur.fetchall())\n",
+    "    print('test for connection:', cur.fetchall()[0][0])\n",
     "\n",
-    "    # drop and create a new table\n",
-    "    if renew:\n",
-    "        query = 'drop table %s'%table\n",
-    "        cur.execute(query)\n",
+    "    # examine whether the table exist\n",
+    "    query = \"select count(*) from pg_class where relname = '%s';\"%table\n",
+    "    cur.execute(query)\n",
+    "    exist = cur.fetchall()[0][0]\n",
+    "    \n",
+    "    # renew or create a table\n",
+    "    if not exist or renew:\n",
+    "        if not exist:\n",
+    "            print('\"%s\" not found in \"%s\" and will be created'%(table, database))\n",
+    "        if renew:\n",
+    "            print('drop the %s and create a new one'%table)\n",
+    "            query = 'drop table %s'%table\n",
+    "            cur.execute(query)\n",
     "        query = '''create table %s(id serial primary key,\n",
     "                                   database text,\n",
     "                                   project text,\n",
@@ -470,17 +492,19 @@
     "        feat_mol.append(\"'%s'\"%mol_smiles)\n",
     "        feat_all.append(\"(%s)\"%(','.join(feat_mol)))\n",
     "\n",
-    "    # import the data into database\n",
-    "    query = \"insert into info (MW, HA, HD, LOGP, RB, SMILES) values %s\" % (','.join(feat_all))\n",
+    "    # import the data into database and set the project\n",
+    "    query = \"insert into %s (MW, HA, HD, LOGP, RB, SMILES) values %s\" % (table, ','.join(feat_all))\n",
     "    cur.execute(query)\n",
-    "    query = \"update info set project = '%s'\"%project\n",
-    "    cur.execute(query)\n",
+    "    if project:\n",
+    "        query = \"update %s set project = '%s'\"%(table, project)\n",
+    "        cur.execute(query)\n",
     "    connection.commit()\n",
+    "    \n",
     "    time2 = time.time()\n",
-    "    print(time2-time1)\n",
+    "    print('using time:', time2-time1)\n",
     "\n",
-    "df = pd.read_excel('f:\\学习课件\\ippin\\ippin.xlsx')\n",
-    "import_data(df, 'ippih', 'SMILES', 'mols', 'info', True)"
+    "df = pd.read_excel('ippin.xlsx')\n",
+    "import_data(df, 'SMILES', 'molecules', 'ippih', 'info', True)"
    ]
   }
  ],
