--- a/postgresql_substructure_search.ipynb
+++ b/postgresql_substructure_search.ipynb
@@ -17,27 +17,39 @@
     "```cmd\n",
     "runas /user:postgres cmd\n",
     "```\n",
+    "\n",
+    "\n",
     "- 在postgres用户下，启动服务端，指定数据库位置\n",
     "```cmd\n",
     "postgres -D d:\\postgresql\\data\n",
     "```\n",
+    "\n",
+    "\n",
     "- 在新cmd终端中创建molecules数据库\n",
     "```cmd\n",
     "createdb molecules\n",
     "```\n",
-    "- 使用python创建info表格，加入id、smiles、LOGP等列，并导入1000条分子数据。[代码可以参考这里](https://github.com/dreadlesss/rdkit_summary/blob/master/postgresql_by_psycopg2.ipynb)。\n",
+    "\n",
+    "\n",
+    "- 使用python创建info表格，加入id、smiles、LOGP等列，并导入1000条分子数据。可以参考[postgresql_by_psycopg2.ipynb]中的介绍。\n",
     "- 导入完成数据后，连接进入数据库\n",
     "```cmd\n",
     "psql molecules\n",
     "```\n",
+    "\n",
+    "\n",
     "- 在“molecules=#”提示符下，查看刚才创建的info表\n",
     "```sql\n",
     "select column_name from information_schema.columns WHERE table_name ='info';\n",
     "```\n",
+    "\n",
+    "\n",
     "- 为当前数据库加载rdkit插件\n",
     "```sql\n",
     "create extension rdkit;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 测试下rdkit插件，能正常输出结果表明环境准备成功\n",
     "```sql\n",
     "select id, mol_from_smiles(smiles::cstring) mol_col from info limit 5;\n",
@@ -49,27 +61,39 @@
     "```sql\n",
     "create schema rdk;\n",
     "```\n",
+    "\n",
+    "\n",
     "- （删除名为rdk的schema）\n",
     "```sql\n",
     "drop schema rdk cascade;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 查看有哪些schema\n",
     "```sql\n",
     "select nspname from pg_namespace;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 将SMILES转换为mol对象，列名记为m，并连同id一起保存在rdk下的mols表中\n",
     "- 其中mol_from_smiles(smi_col::cstring)是rdkit函数，能够将smi_col列作为字符串读取并转换为mol对象\n",
     "```sql\n",
     "select * into rdk.mols from (select id, mol_from_smiles(smiles::cstring) m from info) tmp where m is not null;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 查看rdk下的数据表，相当于mysql的show databases\n",
     "```sql\n",
     "select table_name from information_schema.tables WHERE table_schema = 'rdk';\n",
     "```\n",
+    "\n",
+    "\n",
     "- 对rdk.mols表中的m列建立索引，命名为molidx\n",
     "```sql\n",
     "create index molidx on rdk.mols using gist(m);\n",
     "```\n",
+    "\n",
+    "\n",
     "- 将rdk.mols表中的id列设为主键，主键必须唯一且非空\n",
     "```sql\n",
     "alter table rdk.mols add primary key (id);\n",
@@ -78,19 +102,25 @@
     "# 三、结构搜索与查询\n",
     "终于进入正题了，准备俩小时，查询五分钟。\n",
     "## 1.smiles子结构搜索\n",
-    "- 查看多少分子包含了苯环\n",
+    "- 查看多少分子包含了苯环，顺便介绍一下子结构搜索的操作符\n",
+    "- \"@>\"含义：判断该符号右边的结构是不是该符号左边结构的子结构\n",
+    "- \"<@\"含义：判断该符号左边的结构是不是该符号右边结构的子结构\n",
+    "- \"@=\"含义：判断该符号左右两边的结构是否相同\n",
+    "\n",
     "```sql\n",
-    "- select count(*) from rdk.mols where m@>'c1ccccc1';\n",
+    "select count(*) from rdk.mols where m@>'c1ccccc1';\n",
     "```\n",
+    "\n",
+    "\n",
     "- 查看前5条包含了吲哚结构的分子\n",
     "```sql\n",
-    "- select id, m from rdk.mols where m@>'C1(NC=C2)=C2C=CC=C1' limit 5;\n",
+    "select id, m from rdk.mols where m@>'C1(NC=C2)=C2C=CC=C1' limit 5;\n",
     "```\n",
     "\n",
     "## 2.smarts子结构搜索\n",
     "- 查看多少分子包含了苯环，在smarts后需要加上\"::qmol\"。smarts查询一般会比smiles慢一些。\n",
     "```sql\n",
-    " select count(*) from rdk.mols where m@>'c1[o,s]ncn1'::qmol;\n",
+    "select count(*) from rdk.mols where m@>'c1[o,s]ncn1'::qmol;\n",
     "```\n",
     "\n",
     "## 3.立体信息的结构搜索\n",
@@ -98,6 +128,8 @@
     "```sql\n",
     "set rdkit.do_chiral_sss=true;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 再进行立体结构的搜索\n",
     "```sql\n",
     "select * from rdk.mols where m@>'NC(=O)[C@@H]1CCCN1C=O' limit 10;\n",
@@ -114,10 +146,14 @@
     "```sql\n",
     "select id, m from rdk.mols where m@>mol_adjust_query_properties('*c1cccc(*)n1') limit 10;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 也可以通过JSON格式的参数来停用连接度匹配，这样，除了指定位置必须含有取代基外，其他位置也可以含有取代基\n",
     "```sql\n",
     "select id, m from rdk.mols where m@>mol_adjust_query_properties('*c1cccc(*)n1', '{\"adjustDegree\":false}') limit 10;\n",
     "```\n",
+    "\n",
+    "\n",
     "- 还可以通过其他的参数参数进行更精细的匹配，这里就不深入讨论了，感兴趣可以研究下下方链接里的内容。\n",
     "\n",
     "本文参考自[rdkit官方文档](http://www.rdkit.org/docs/Cartridge.html)。"
