--- a/postgresql_by_psycopg2.ipynb
+++ b/postgresql_by_psycopg2.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "- 导入psycopg2，并创建一个connection连接：connect()<br />\n",
     "database：设置连接数据库的名称<br />\n",
-    "user：用户<br />\n",
+    "user：用户名，可以从cmd命令行中，通过“psql molecules”进入数据库，并输入“select usename from pg_user;”查看用户名<br />\n",
     "password：密码<br />\n",
     "port：端口号，默认5432<br />\n",
     "host：宿主ip"
@@ -38,7 +38,7 @@
    "source": [
     "import psycopg2\n",
     "connection = psycopg2.connect(database='molecules',\n",
-    "                              user='Administrator',\n",
+    "                              user='hxw',\n",
     "                              password='postgresql',\n",
     "                              port='5432',\n",
     "                              host='127.0.0.1')\n",
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "[('Administrator',)]"
+       "[('hxw',)]"
       ]
      },
      "execution_count": 3,
@@ -211,7 +211,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>α-hANP</td>\n",
        "      <td>85637-73-6</td>\n",
        "      <td>N1[C@H](C(=O)N[C@H](C(=O)N[C@H](C(=O)N[C@H](C(...</td>\n",
@@ -267,7 +267,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_excel('f:\\学习课件\\ippin\\ippin.xlsx')\n",
+    "df = pd.read_excel('ippin.xlsx')\n",
     "df.head(1)"
    ]
   },
@@ -415,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test for connection: Administrator\n",
+      "test for connection: hxw\n",
       "drop the info and create a new one\n",
-      "using time: 2.7821590900421143\n"
+      "using time: 2.6931540966033936\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
     "    # connect to database and test for connection\n",
     "    time1 = time.time()\n",
     "    connection = psycopg2.connect(database=database,\n",
-    "                                  user='Administrator',\n",
+    "                                  user='hxw',\n",
     "                                  password='postgresql',\n",
     "                                  port='5432',\n",
     "                                  host='127.0.0.1')\n",
@@ -524,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc-autonumbering": false
  },
