update rdMolDraw2D usage

--- a/rdMolDraw2D_for_png_svg.ipynb
+++ b/rdMolDraw2D_for_png_svg.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 绘制png：MolDraw2DCairo\n",
+    "# 一、绘制png：MolDraw2DCairo\n",
     "* 首先，创建一个Cairo drawer：Chem.Draw.rdMolDraw2D.MolDraw2DCairo(arg1, arg2)，同Chem.Draw.MolDraw2DCairo(arg1, arg2)\n",
     "arg1和arg2分别是绘制图像的长和宽\n",
     "* 接着，准备待绘制的分子：PrepareMolForDrawing(mol, kekulize=True ,addChiralHs=True, wedgeBonds=True, forceCoords=False)\n",
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "from rdkit import Chem\n",
-    "from rdkit.Chem.Draw import rdMolDraw2D"
+    "from rdkit.Chem.Draw import rdMolDraw2D\n",
+    "from IPython.display import Image"
    ]
   },
   {
@@ -60,7 +61,6 @@
     }
    ],
    "source": [
-    "from IPython.display import Image\n",
     "Image(filename = 'data/rdMolDraw2D_1.png', width=250)"
    ]
   },
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 绘制svg：MolDraw2DSVG\n",
+    "# 二、绘制svg：MolDraw2DSVG\n",
     "* 首先，创建一个svg drawer：Chem.Draw.rdMolDraw2D.MolDraw2DSVG(arg1, arg2)，同Chem.Draw.MolDraw2DSVG(arg1, arg2)\n",
     "arg1和arg2分别是绘制图像的长和宽\n",
     "* 接着，准备并绘制分子，两个步骤合二为一：PrepareAndDrawMolecule(drawer, mol, ...)\n",
@@ -102,7 +102,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 绘制设置(svg设置类似)"
+    "# 三、绘制设置(svg设置类似)\n",
+    "* 实例化一个参数器：do = rdMolDraw2D.MolDrawOptions()\n",
+    "* 将分子键的宽度设置为4：do.bondLineWidth = 4\n",
+    "* 将分子键的长度设置为30：do.fixedBondLength = 30\n",
+    "* 将分子顺时针旋转30度：do.rotate = 30\n",
+    "* 修改原子标签：do.atomLabels[2] = 'OH group'\n",
+    "* 应用设置：SetDrawOptions(do)"
    ]
   },
   {
@@ -131,14 +137,81 @@
     "d = rdMolDraw2D.MolDraw2DCairo(150, 150)\n",
     "do = rdMolDraw2D.MolDrawOptions()\n",
     "do.bondLineWidth = 4\n",
-    "do.fixedBondLength=30\n",
-    "do.rotate=30\n",
+    "do.fixedBondLength = 30\n",
+    "do.rotate = 30\n",
     "do.atomLabels[2] = 'OH group'\n",
     "d.SetDrawOptions(do)\n",
     "rdMolDraw2D.PrepareAndDrawMolecule(d, m)\n",
     "d.FinishDrawing()\n",
     "d.WriteDrawingText('data/rdMolDraw2D_3.png')\n",
     "Image(filename='data/rdMolDraw2D_3.png', width=250)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 参考：\n",
+    "https://github.com/Yosuyo/canvas_server/blob/master/structure.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createImage(smiles):\n",
+    "    from rdkit import Chem\n",
+    "    from rdkit.Chem import rdDepictor\n",
+    "    from rdkit.Chem.Draw import rdMolDraw2D\n",
+    "    from rdkit.Chem.Draw.MolDrawing import DrawingOptions\n",
+    "\n",
+    "    mol = Chem.MolFromSmiles(smiles)  # Penicillin\n",
+    "    rdDepictor.Compute2DCoords(mol)  # for generating conformer ID\n",
+    "    # create a drawer container\n",
+    "    drawer = rdMolDraw2D.MolDraw2DSVG(300, 300)\n",
+    "    # define drawer options\n",
+    "    drawer.drawOptions().updateAtomPalette({k: (0, 0, 0) for k in DrawingOptions.elemDict.keys()})\n",
+    "    drawer.SetLineWidth(2)\n",
+    "    drawer.SetFontSize(1.0)\n",
+    "    #\n",
+    "    drawer.DrawMolecule(mol)\n",
+    "    drawer.FinishDrawing()\n",
+    "    # generate and write the svg strings\n",
+    "    svg = drawer.GetDrawingText().replace('svg:', '')\n",
+    "    with open(\"static/images/svgs/\"+smiles+\".svg\", \"w\") as f:\n",
+    "        f.write(svg)\n",
+    "\n",
+    "def createImageHighlight(smiles, smarts):\n",
+    "    from rdkit import Chem\n",
+    "    from rdkit.Chem import AllChem\n",
+    "    from rdkit.Chem import rdDepictor\n",
+    "    from rdkit.Chem.Draw import rdMolDraw2D\n",
+    "    from rdkit.Chem.Draw.MolDrawing import DrawingOptions\n",
+    "\n",
+    "    mol = Chem.MolFromSmiles(smiles)\n",
+    "    patt = Chem.MolFromSmarts(smarts)\n",
+    "    hitatoms = mol.GetSubstructMatches(patt) #反応部位のアトムインデックス\n",
+    "    hitatomslist = []\n",
+    "    for x in hitatoms:\n",
+    "        hitatomslist += x\n",
+    "    hitatomsSum = tuple(hitatomslist)\n",
+    "    tm = rdMolDraw2D.PrepareMolForDrawing(mol)\n",
+    "    rdDepictor.Compute2DCoords(mol)  # for generating conformer ID\n",
+    "    # create a drawer container\n",
+    "    drawer = rdMolDraw2D.MolDraw2DSVG(300, 300)\n",
+    "    # define drawer options\n",
+    "    drawer.drawOptions().updateAtomPalette({k: (0, 0, 0) for k in DrawingOptions.elemDict.keys()})\n",
+    "    drawer.SetLineWidth(2)\n",
+    "    drawer.SetFontSize(1.0)\n",
+    "    drawer.drawOptions().setHighlightColour((0.95,0.7,0.95)) #ハイライトの色指定\n",
+    "    drawer.DrawMolecule(tm, highlightAtoms=hitatomsSum)\n",
+    "    drawer.FinishDrawing()\n",
+    "    # generate and write the svg strings\n",
+    "    svg = drawer.GetDrawingText().replace('svg:', '')\n",
+    "    with open(\"static/images/svgs/\"+smiles+\"_\"+smarts+\".svg\", \"w\") as f:\n",
+    "        f.write(svg)"
    ]
   }
  ],
